# datastories

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Water/: Water.ipynb
notebook/: Water.ipynb
