[project]
name = "datastories"
version = "0.1"
description = "Data stories."
authors = [{ name = "Timothy Makobu" }]
license = { text = "GPL-V3" }
readme = "README.md"
package-mode = false


requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
