[project]
name = "datastories"
version = "0.1"
description = "Data stories."
authors = [{ name = "Timothy Makobu" }]
license = { text = "GPL-3.0" }
readme = "README.md"
package-mode = false


requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
    "jupyterlab-lsp (>=5.1.0,<6.0.0)",
    "seaborn[stats] (>=0.13.2,<0.14.0)",
    "networkx[default,extra] (>=3.4.2,<4.0.0)",
    "jedi-language-server (>=0.43.1,<0.44.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
